# ursina-voxel-projects

./: .gitignore  README.md  floor.py  pyproject.toml  script.py  voxel.py
