[tool.poetry]
name = "ursina-voxel-projects"
version = "0.1.0"
description = "Simple voxel-building projects with the Ursina game engine using Python."
authors = ["Malachi Gruenhagen <68450431+nurse-the-code@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
ursina = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
